kagenti/installer/app/resources/kiali-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
spec:
  parentRefs:
    - name: http
      namespace: kagenti-system
  hostnames:
    - "kiali.localtest.me"
  rules:
    - backendRefs:
        - name: kiali 
          port: 20001
